# rust-timestamp-api

./: Cargo.toml  learning-resources.md  readme.md
src/: error.rs  main.rs
src/handlers/: mod.rs  time.rs  timezone.rs  weekday.rs
tests/: api_tests.rs
